# uwuzu.py

./: LICENSE  README.md  __init__.py  pyproject.toml
